Исправления по замечаниям Костенко от 08.07.21.

--- a/Dissertation/partPropulsion.tex
+++ b/Dissertation/partPropulsion.tex
@@ -28,8 +28,8 @@
 \noindent где
 \begin{itemize}
     \item $Q$ -- момент сопротивления вращению на валу привода;
-    \item $J_p$ -- момент инерции с учётом присоедённого момента воды (кг$\cdot$м$^2$);
-    \item $K_{n|n|}$ -- нелинейный коэффициент демпфирования мотора (кг$\cdot$м$^2$);
+    \item $J_p$ -- момент инерции с учётом присоедённого момента воды;
+    \item $K_{n|n|}$ -- нелинейный коэффициент демпфирования мотора;
     \item $u_p$ -- скорость потока в канале движителя;
 \end{itemize}
 
@@ -49,8 +49,8 @@
 \noindent где
 \begin{itemize}
     \item $\eta$ -- это безразмерный коэффициент эффективности винта;
-    \item $p$ -- шаг винта (продольное расстояние которое винт за один оборот), (pitch);
-    \item $A$ -- площадь сечения винта, (duct area);
+    \item $p$ -- шаг винта;
+    \item $A$ -- площадь сечения винта;
     \item $V$ -- объем насадки в которой расположен винт.
 \end{itemize}
 
@@ -64,9 +64,9 @@
 \end{gather*}
 \noindent где
 \begin{itemize}
-    \item $Q_m$ -- момент на валу сформированный приводом (Нм);
-    \item $m_f$ -- масса воды захватываемая винтом (кг);
-    \item $d_f$ -- квадратичный демпфирующий коэффициент (кг/м);
+    \item $Q_m$ -- момент на валу сформированный приводом;
+    \item $m_f$ -- масса воды захватываемая винтом;
+    \item $d_f$ -- квадратичный демпфирующий коэффициент;
     \item $u$ -- продольная скорость движения ПА.
 \end{itemize}
 
@@ -88,8 +88,7 @@
 \subsection{Математическая модель гребного винта}
 
 Для гребного винта с фиксированным шагом, момент на валу $Q$ и сила (упор) вырабатываемая винтом $T$ зависит от продольной скорости движения аппарата $u$, скорости потока воды $u_a$, а так же скорости вращения винта $n$.
-Кроме этого на работу движителя влияют нестационарные потоки которые влияют на эффективность работы движителя.
-В соответствии с работами \cite{newman2018marine, breslin1996hydrodynamics, carlton2018marine} к основным эффектом влияния можно отнести следующие:
+В соответствии с работами \cite{newman2018marine, breslin1996hydrodynamics, carlton2018marine} на работу движителя также влияют следующие параметры настационарности потока, формируемого гребным винтом:
 \begin{itemize}
     \item всасывание воздуха;
     \item кавитация;
@@ -98,11 +97,11 @@
 \end{itemize}
 
 Приведенные факторы рассматриваются в основном в приложении к надводным судам.
-Для движителей подводных аппаратов маневрирующих в толще воды на значительной глубине погружения.
+Для движителей подводных аппаратов, маневрирующих в толще воды на значительной глубине погружения.
 Эффект Куснера связанный со срывом потока связан с высокоамплитудными переключениями сигнала управления движителем и им также можно пренебречь.
 
 Квазистационарное моделирование тяги и крутящего момента движителя обычно происходит в терминах кривых подъемной силы и момент сопротивления, которые возможно преобразовать в тягу и момент.
-Подъемная сила и момент сопротивления обычно формируются через безразмерные коэффициенты упора $K_T$ и момента $K_Q$, которые рассчитываются на базе швартовых испытаний движителя.
+Подъемная сила и момент сопротивления обычно формируются через безразмерные коэффициенты упора $K_T$ и момента $K_Q$, которые рассчитываются на базе модельных испытаний прототипа гребного винта \cite{daidola1992propeller}.
 В ходе этих испытаний формируются кривые зависимости упора и момента от скорости вращения вала движителя
 \begin{equation}
     \label{eq:propeler_model}
@@ -144,7 +143,7 @@
 
 \subsection{Математическая модель привода движителя}
 
-Модель электропривода движителя обычно представляют следующим набором уравнений, которые описывают поведение мотора постоянного тока с независимым возбуждением \cite{zhao2015torque}:
+Модель электропривода движителя обычно представляют следующим набором уравнений, которые описывают поведение электрического двигателя постоянного тока с независимым возбуждением \cite{zhao2015torque}:
 \begin{equation}
 	\label{eq:motor_model}
 	\begin{array}{ll}
@@ -252,7 +251,7 @@
 
 Большое исследование эффективности работы подруливающих движителей АНПА с формированием обобщенной модели влияния скорости и направления набегающего потока на аппарат было проведено в рамках работы \cite{palmer2008modelling} а так же в последующей докторской работе этого же автора \cite{palmer2009analysis}.
 
-В упомянутых научных работых было показано что падение эффективности подруливающего движителя не связано с уменьшеньем эффективности самого устройства, а скорее с взаимодействием пропульсивной струи, которую создает подруливающий движитель, с набегающим на ПА потоком.
+В упомянутых научных работах было показано что падение эффективности подруливающего движителя не связано с уменьшеньем эффективности самого устройства, а скорее с взаимодействием пропульсивной струи, которую создает подруливающий движитель, с набегающим на ПА потоком.
 
 Работа подруливающего движителя ПА при отсутствии поперечного потока полностью эквивалентна модели маршевого движителя, т.е. на аппарат действует определенная сила (упор) приложенная к точке крепления движителя за счет формирования пропульсивной струи ПА.
 Но в случае, когда ПА движется с продольной скоростью $u$, то пропульсивная струя формируемая подруливающим движителем формирует гидродинамическую тень (на рисунке закрашена серым цветом) на корпусе ПА в области за подруливающей шахтой (рисунок \ref{fig:modelling-tunnel}).
@@ -271,7 +270,7 @@
 
 При этом разница давлений вокруг входа в туннель подруливающего движителя и вокруг выходом из него не оказывают значительного влияния на эффективность подруливающего движителя \cite{brix1973lateral}.
 
-Количественные изменения эффективности подруливающего движителя были проведены в работе \cite{chislett1966influence} в котором экспериментально исследовалась эффективность движительно-рулевого комплекса на макете судна.
+Количественные изменения эффективности подруливающего движителя были оценены в работе \cite{chislett1966influence} в котором экспериментально исследовалась эффективность движительно-рулевого комплекса на макете судна.
 В ходе эксперимента авторы получили коэффициенты эффективности упора $K_F$ создаваемого подруливающим движителем и момента сопротивления вращению гребного винта $K_N$.
 Они определяются следующим образом:
 \begin{equation*}
@@ -286,9 +285,9 @@
     \label{fig:tunnel_effectivness}
 \end{figure}
 
-По рисунку \ref{fig:tunnel_effectivness} представленному в статье \cite{chislett1966influence} видно что результирующий упор создаваемый подруливающим движителем падает при большом отношении скорости набегающего потока к скорости пропульсивной струи, при этом как момент сопротивления вращению ГВ падает существенно слабее, т.е. эффективность работы подруливающего устройства становится крайне низкой.
+По рисунку \ref{fig:tunnel_effectivness} представленному в статье \cite{chislett1966influence} видно что результирующий упор создаваемый подруливающим движителем падает при большом отношении скорости набегающего потока к скорости пропульсивной струи, при этом как момент сопротивления вращению ГВ падает существенно слабее.
 
-Экспериментальные исследование эффективности подруливающего движителя для АНПА было так же проведено в работе \cite{beveridge1972design}, где были получены данные аналогичные представленным на рисунке \ref{fig:tunnel_effectivness}.
+Экспериментальные исследования эффективности подруливающего движителя для АНПА было так же проведено в работе \cite{beveridge1972design}, где были получены данные аналогичные представленным на рисунке \ref{fig:tunnel_effectivness}.
 
 В работе \cite{palmer2009analysis} предложено силу формируемую разностью давлений представлять следующим образом:
 \begin{equation}
@@ -311,7 +310,7 @@
 \end{equation}
 \noindent где $T_T(v=0)$ -- упор создаваемый подруливающим движителем в отсутствии набегающего потока, $\rho$ -- плотность воды, $A=\pi R^2$, где $R$ -- радиус гребного винта подруливающего движителя.
 
-Момент действующий на ПА формируемый упором движителя и гидродинамической силой определяется следующим образом:
+Дифферентующий момент формируемый упором подруливающего движителя и гидродинамической силой определяется следующим образом:
 \begin{equation*}
 	M = T_T x_T + (T_T-T_S)x_S
 \end{equation*}
@@ -319,10 +318,10 @@
 \begin{equation*}
 	x_S = x_T - kD\frac{u}{u_j}
 \end{equation*}
-\noindent где $D$ -- диаметр туннеля подруливающего движителя, $k$ -- некоторый коэффициент.
+\noindent где $D$ -- диаметр туннеля подруливающего движителя, $k$ -- коэффициент, зависящий от коструктивных особенностей подруливающей шахты и формы АНПА.
 
-Кроме скорости набегающего потока на эффективность подруливающего движителя так же будет оказывать влияние угол дрейфа.
-В работе \cite{palmer2008modelling} представлена модель зависимости упора создаваемого горизнтальным подруливающим движителем от скорости набегающего потока и угла дрейфа.
+Кроме скорости набегающего потока на эффективность подруливающих двигателей оказывают влияние углы атаки и дрейфа ПА.
+В работе \cite{palmer2008modelling} представлена модель зависимости упора создаваемого горизонтальным подруливающим движителем от скорости набегающего потока и угла дрейфа.
 
 \section{Модель рулевых устройств ПА}
 В техническом отчете \cite{steenson2011control} подробно представлен расчет подъемной силы для АНПА ``Dolphin 2'', в котором ДРК состоит из четырех кормовых рулей нормального расположения и четырех подруливающих движителей (2-х вертикальных и 2-х горизонтальных).
@@ -360,7 +359,7 @@
 \begin{equation*}
     \alpha = \delta - \psi
 \end{equation*}
-\noindent где $\delta$ -- угол перекладки ГУ относительно ССК, $\psi$ -- текущий дифферент АНПА.
+\noindent где $\delta$ -- угол перекладки ГУ относительно продольной оси ССК, $\psi$ -- текущий дифферент АНПА.
 
 Традиционным конструктивным и эксплуатационным решением РУ является использование кормовых рулей и элеронов, хотя при малых скоростях движения находят применение и дополнительные рули глубины.
 Управляющие моменты рулей являются функцией угла перекладки и скорости набегающего потока, при этом дополнительные силы лобового сопротивления не всегда учитывается при анализе управления.
@@ -462,7 +461,7 @@
 \end{figure}
 
 \subsection{Моделирование рулевых устройств ПА}
-В соответствии с моделью руля управления (уравнение \ref{eq:modelling-rudder}) была составлена численная модель при этом коэффициент производной гидродинамической характеристики руля был взят за $0.0001$.
+В соответствии с моделью руля управления (уравнение \ref{eq:modelling-rudder}) была составлена численная модель при этом коэффициент производной гидродинамической характеристики руля был взят за $0.0025$.
 Результаты численного моделирования момента создаваемого рулем управления при различных скоростях набегающего потока представлены на рисунке \ref{fig:modelling-rudder-velocity}.
 
 % \begin{notequestion}
