--- a/Dissertation/partStatement.tex
+++ b/Dissertation/partStatement.tex
@@ -79,14 +79,14 @@
 В подавляющем большинстве случаев к этой группе относят практически все телеуправляемые необитаемые подводные аппараты (ТНПА) с фиксированными движителями, а также большая часть АНПА оснащенных фиксированными движителями и/или рулями управления \cite{костенко2017разработка, костенко2019задача}.
 В статье \cite{yuh2000design} представлен обзор различных АНПА разработанных до 2000-го года за рубежом.
 Большинство представленных аппаратов оснащено одним или двумя маршевыми движителями, которые работают совместно с рулями управления.
-К этой группе также могут быть отнесены такие аппараты как «МТ-2010» \cite{борейко2011малогабаритный}, «ММТ-3000» \cite{горнак2007ммт} и другие аппараты разработанные в Институте проблем морских технологий ДВО РАН.
+К этой группе также могут быть отнесены такие аппараты как «МТ-2010» \cite{борейко2011малогабаритный}, «ММТ-3000» \cite{горнак2007ммт} и другие аппараты разработанные в Институте проблем морских технологий ДВО РАН которые оснащены маршевой движительно-рулевой группой и подруливающими устройствами.
 
 Для линейных систем исполнительных механизмов исторически первыми появились статические модели, описывающие их поведение, и соответствующие им статические методы оптимизации, но после 2000-го года начали появляться исследования, в рамках которых учитывалась динамическая модель исполнительных механизмов при решении задачи оптимального управления ДРК.
 
 \subsubsection{Аналитическое решение при $\vect{u} \in \mathspace{R}^k$}
 Отдельным случаем является аналитическое решение задачи при отсутствии ограничений на управляющие команды, т.е. $\vect{u} \in \mathspace{R}^k$.
 Такая ситуация отчасти является синтетической, но может быть к ней сведена подбором специальных контуров управления с затяжными переходными процессами.
-При отсутствии ограничений на команды управления, оптимизационная задача может быть на основе метрики $L_2$ (евклидова норма):
+При отсутствии ограничений на команды управления, оптимизационная задача может быть решена на основе метрики $L_2$ (евклидова норма):
 \begin{gather*}
     \min \frac{1}{2}(\vect{u} - \vect{u_p})W(\vect{u} - \vect{u_p}) \\
     \text{при } \vect{\nu}_c = B\vect{u} \notag
@@ -124,7 +124,7 @@
 \begin{equation*}
     \alpha_1 = \min \left\{ \frac{l_1 \cdot u_j^{lim}}{u_j^{ub}} \right\}_{j=1}^k
 \end{equation*}
-\noindent где $u_j^{lim}$ представляет собой максимальный значение команды управления $j$-го исполнительного механизма. Для простоты, считаем что характеристика  исполнительного механизма симметрична, т.е. $u_j^{lim} = u_j^+ = u_j^-$
+\noindent где $u_j^{lim}$ представляет собой максимальное значение команды управления $j$-го исполнительного механизма. Для простоты, считаем что характеристика  исполнительного механизма симметрична, т.е. $u_j^{lim} = u_j^+ = u_j^-$
 
 Для осей с меньшим приоритетом, т.е. для $i>1$ в наборе $\nu_c^{prio}$, расчёт сжимающего коэффициента будет записан следующим образом:
 \begin{equation*}
@@ -149,7 +149,7 @@
 В данной постановке задачи используются различные математические методы поиска решения, например, метод активного набора (active set) или метод внутренней точки (interior point).
 Оба метода использовались при квадратичной формулировки задачи управления ДРК \cite{petersen2005constrained, harkegard2002efficient}.
 Функционал $J$ может быть записан также и в $L_1$ метрике, но особенностью методов линейного программирования при решении таких задач является поиск оптимального решения по граням и вершинам области допустимых значений границ подмножества $\mathspace{U}$. 
-Физический смысл этого заключается в тенденции максимальной загрузки минимального количества ИМ \cite{bodson2002evaluation}, что существенно повышает износ отдельных ИМ и ведёт к чрезмерной нагрузке на систему энергообеспечения. В то время как методы квадратичного программирования, в свою очередь, стремятся найти такое решение, которое распределяет равную нагрузку на максимальное количество элементов управления.
+Физический смысл этого заключается в тенденции максимальной загрузки минимального количества ИМ \cite{bodson2002evaluation}, что существенно уменьшает КПД электропривода, повышает износ отдельных ИМ и ведёт к чрезмерной нагрузке на систему энергообеспечения. В то время как методы квадратичного программирования, в свою очередь, стремятся найти такое решение, которое распределяет равную нагрузку на максимальное количество элементов управления.
 
 \subsubsection{Динамическое распределение}
 Предыдущие формулировки задачи распределения вектора управления строились на базе статической модели ИМ и не учитывали динамических процессов, которые происходят в них.
@@ -284,17 +284,17 @@
 В главе приведены различные подходы и методы решения задачи управления ДРК в зависимости от его типа.
 Кроме того, представлены программные пакеты, которые позволяют реализовать рассмотренные подходы в компьютерах и встраиваемых системах. 
 
-Описываемая задача представляется достаточно проработанной, но в тоже время существует большой пласт особенностей динамики ИМ, которые до сих пор не учтены в представленных подходах:
+Описываемая задача представляется достаточно проработанной, но в тоже время существует большой пласт особенностей ИМ, которые до сих пор не учтены в представленных подходах:
 \begin{itemize}
     \item при формировании моделей исполнительных механизмов явным образом не выражены параметры электроприводов. В работах не учитывается, что коэффициент полезного действия электромотора существенно зависит от скорости вращения вала привода;
-    \item модель ИМ не учитывает сильную зависимость параметров исполнительных механизмов от скорости набегающего потока, хотя это важный параметр для работы всех исполнительных механизмов. Так например в работе \cite{palmer2008modelling} показано что из-за гидродинамических особенностей эффективность подруливающего движителя существенно падает с возрастанием скорости набегающего потока.
+    \item модель ИМ не учитывает сильную зависимость параметров исполнительных механизмов от скорости набегающего потока, хотя это важный параметр для работы всех исполнительных механизмов. Так например в работе \cite{palmer2008modelling} показано что из-за гидродинамических особенностей эффективность подруливающего движителя существенно падает с возрастанием скорости поперечного набегающего потока.
 \end{itemize}
 
 \textbf{Целью диссертационной работы} является разработка методов энергоэффективного и отказоустойчивого управления избыточным движительно-рулевым комплексом подводного аппарата с учётом динамики исполнительных механизмов и их гидродинамических особенностей.
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item изучить модели описания исполнительных механизмов (маршевые движители, подруливающие движители, рули управления) ДРК подводного аппарата учитывающие особенности их работы в набегающем потоке;
+  \item изучить математические модели исполнительных механизмов (маршевые движители, подруливающие движители, рули управления) ДРК подводного аппарата учитывающие особенности их работы в набегающем потоке;
   \item разработать метод формального описания, анализа и реконфигурации в режиме реального времени ДРК, оснащенного произвольным набором исполнительных механизмов;
   \item разработать и реализовать метод определения скорости набегающего потока по параметрам работы электроприводов маршевых движителей;
   \item разработать и реализовать энергетически оптимальный отказоустойчивый метод управления ДРК для АНПА устойчивый к неполному знанию скорости набегающего потока;
@@ -303,8 +303,8 @@
 \end{enumerate}
 
 \section{Выводы по главе 1}\label{sec:Statement/Conclusion}
-В первой главе приведен обзор современных методов и подхов к решению задачи оптимального управления ДРК.
+В первой главе приведен обзор современных методов и подходов к решению задачи энергоэффективного управления ДРК.
 
-Отмечено, что хоть тема достаточно проработана, но в работах почти никак не фигурируют гидродинамические особенности работы исполнительных механизмов в набегающем потоке и уменьшение их результирующей силы, что будет детально рассмотрено в следующих главах диссертации.
+Отмечено, что хоть тема достаточно проработана, но в работах почти никак не фигурируют гидродинамические особенности работы исполнительных механизмов в набегающем потоке и уменьшение их результирующей силы, что будет детально рассмотрено в следующих главах работы.
 
 На основе проведенного анализа сформулированы цель и поставлены задачи диссертационного исследования.
