--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,5 +1,5 @@
 {\actuality}
-Задача управления ДРК (control allocation в иностранной терминологии) возникает естественным образом для избыточного (over-actuated) ДРК ПА, то есть такого ДРК в котором ИМ (рули управления, маршевые и подруливающие движители) больше чем количество доступных для управления степеней свободы. Использование ДРК такого типа широко распространено по следующим причинам:
+Задача управления ДРК (control allocation в иностранной терминологии) возникает естественным образом для избыточного (over-actuated) ДРК ПА, в котором ИМ (рули управления, маршевые и подруливающие движители) больше чем количество доступных для управления степеней свободы. Использование ДРК такого типа широко распространено по следующим причинам:
 
 \begin{itemize}
     \item в виду того, что подводные операции сопряжены с высокой степенью риска, избыточность необходима для реализации функций резервирования систем управления движением подводного аппарата;
